# adventure-bot

./: .gitignore  README.md  adventurer-bot.sln  bot_log.txt  config.json  discord-adventurers-bot.pyproj  discord-adventurers-bot.sln  main.py  pyproject.toml  requirements.txt  test.py
cogs/: action_cmd.py  actions.py  admin.py  adventure.py  fun.py  general.py  moderation.py  owner.py  stats.py  stats_cmd.py  sys.py  template.py
cogs/general/: fun.py  general.py  moderation.py  owner.py
cogs/management/: actions.py  admin.py  decks.py  stats.py  sys.py
cogs/meta/: actions.py  admin.py  card.py  deck.py  decks.py  info.py  purchase.py  search.py  stats.py  sys.py
cogs/play/: adventure.py  fun.py  pvp.py  pvp_temp.py  raid.py  tutorial.py
cogs/search/: cards.py  entities.py
exceptions/: __init__.py
helpers/: __init__.py  asset_manager.py  battle.py  battle_temp.py  card.py  checks.py  db_manager.py  json_loader.py
helpers/battle/: battle.py  battle_temp.py  card.py  player.py
helpers/resources/: __init__.py  adventure.py  card.py  constants.py  effects.py  fish.py  hometown.py  items.py  loader.py  minigames.py  misc.py  misc_json.py  mobs.py  perks.py
src/: env.py  main.py
src/db/: __init__.py  (+6 more)
txts/: admins.json  bot_log.txt  card_list.json  cards.json  hometown.json  mobs.json  search.txt
util/: __init__.py  assets.py  backpack.py  cards.py  constants.py  general.py  poker.py
views/: __init__.py  battle_actions.py  battle_select.py  bj.py  card_inv.py  card_pages.py  confirm.py  decks.py  leaderboard.py  pvp_invite.py  raid_invite.py  shop.py
(+159 files in other folders)
